--- a/_posts/2021-01-03-글쓰기를-주제로-한-뉴스레터-(사이드)-프로젝트.md
+++ b/_posts/2021-01-03-글쓰기를-주제로-한-뉴스레터-(사이드)-프로젝트.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "글쓰기를 주제로 한 뉴스레터 (사이드) 프로젝트"
-author: samanth
+author: samantha
 categories: [ creator ]
 image: assets/images/16.jpg
 ---
